{{$NEXT}}

0.000140  2021-05-12 08:08:17-07:00 America/Los_Angeles

    - Add L() "length" quick check for comparisons

0.000139  2020-12-15 19:48:07-08:00 America/Los_Angeles

    - Merge PR to add ISA checks
    - Fix Manual module that was missing package/return true

0.000138  2020-10-21 19:46:07-07:00 America/Los_Angeles

    - Merge doc fix from PR
    - Merge strict fix for test

0.000137  2020-10-21 18:22:07-07:00 America/Los_Angeles

    - Test new syntax `use Test2::Plugin::SRand seed => $seed;`
    - Update GitHub workflow with deprecated add-path

0.000136  2020-10-05 22:05:24-07:00 America/Los_Angeles

    - Fix typo Test2::Builder -> Test::Builder
    - Improve import logic for SRand
    - Other misc typo fixes

0.000135  2020-08-16 21:44:24-07:00 America/Los_Angeles

    - No changes since last trial

0.000134  2020-08-15 13:11:30-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix 5.8 support

0.000133  2020-08-14 21:59:19-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Add summary of missing/extra elements in compare diagnostics

0.000132  2020-08-06 18:10:48-07:00 America/Los_Angeles

    - Fix min Test2 version

0.000131  2020-08-05 21:45:59-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix the grabber tool to inherit Test::Builder $TODO functionality

0.000130  2020-05-30 11:11:54-07:00 America/Los_Angeles

    - Many documentation fixes

0.000129  2020-01-31 08:33:46-08:00 America/Los_Angeles

    - José Joaquín Atria Improve error handling of mock->override with AUTOLOADed methods

0.000128  2020-01-30 08:45:43-08:00 America/Los_Angeles

    - Nicolas R Import option to skip utf8 import
    - Victoria Mihell-Hale Correct POD for Test2/Tools/Mock.pm's mocked() method
    - Victoria Mihell-Hale Fix miscellaneous typos in Test2(/Tools)/Mock.pm POD
    - Nicolas R Add GitHub actions
    - Daniel Mita Fix PKG case for Test2::Tools::Target docs
    - Daniel Mita Document target change in V0 and Bundle::Extended